--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   pointycastle: ^2.0.1
   flutter_spinkit: ^5.0.0
+  asn1lib: ^1.0.0
 
 dev_dependencies:
   flutter_test:
