--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   pointycastle: ^2.0.1
   flutter_spinkit: ^5.0.0
   asn1lib: ^1.0.0
+  sqflite: ^2.0.0+3
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
