--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   asn1lib: ^1.0.0
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  firebase_core: ^1.0.3
+  cloud_firestore: ^1.0.4
 
 dev_dependencies:
   flutter_test:
