--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   asn1lib: ^1.0.0
   sqflite: ^2.0.0+3
   path: ^1.8.0
+  test: ^1.16.5
   # firebase_core: ^1.0.3
   # cloud_firestore: ^1.0.4
 
